[package]
name = "jsonrpc-ws"
version = "0.1.0"
authors = ["tiannian <dtiannian@aliyun.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jsonrpc-lite = "0.5.0"
fxhash = "0.2.1"

[dependencies-dev]
tokio = { version = "0.2", features = ["full"] }
