[package]
name = "jsonrpc-websocket"
version = "0.1.0"
authors = ["xujian <s1473561555@sina.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "jsonrpc_websocket"
path = "src/lib.rs"


[dependencies]
tokio = { version = "0.2", features = ["full"] }
chrono = "0.4.11"
tokio-tungstenite = "0.10.1"
futures-util = { version = "0.3", default-features = false, features = ["async-await", "sink", "std"] }
url = "2.0.0"
jsonrpc-lite = "0.5.0"
jsonrpc = { path = "../../jsonrpc-ws" }
log = "0.4.8"


[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
env_logger = "0.7"